fix: align web and print margins

--- a/assets/css/modern-hugo-resume.css
+++ b/assets/css/modern-hugo-resume.css
@@ -9,8 +9,11 @@
     margin-left: auto;
     margin-right: auto;
     max-width: var(--page-width);
-    padding-left: theme("padding.4");
-    padding-right: theme("padding.4");
+    padding: var(--page-margin);
+  }
+
+  main > *:first-child {
+    margin-top: 0;
   }
 
   :root {
@@ -101,8 +104,7 @@
 
   @media print {
     body {
-      padding-left: 0;
-      padding-right: 0;
+      padding: 0;
     }
 
     a {
